radarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  template:
    spec:
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /movies
              name: movies
      volumes:
        - name: config
          hostPath:
            path: /opt/radarr/config
            type: Directory
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: Directory
        - name: movies
          hostPath:
            path: /tank/media/movies
            type: Directory
